@@ -32,6 +32,7 @@
     * fix log_error in Application and Request to convert unicode to
       utf-8 string in python2.x
     * is_route and is_rroute methods
+    * X-Forwarded-* headers support
 
 ==== 1.5.2 ====
     * Info about unstable branch
